[package]
name = "ak_macros"
version = "0.2.2"
edition = "2021"
readme = "README.md"
authors = ["Hamdy-Mohamedak <mohameddhamdy407@gmail.com>"]
description = "A crate for faster development and simpler syntax"
license = "MIT"
repository = "https://github.com/hamdymohamedak/AK-macro/"
keywords = ["Ak-Macros", "macro","no_std","random","system"]
homepage = "https://ak-macros.vercel.app"
[dependencies]
# rand = "0.8.4" # use_rand Macro
# reqwest = { version = "0.12", features = ["json"] } # fetch api Macro 
# tokio = { version = "1", features = ["full"] } #  fetch api Macro
# serde = { version = "1.0", features = ["derive"] } #  fetch api Macro
# serde_json = "1.0" #  fetch api Macro
# zip-extract = "0.1.3" # ZIP Macro 
